--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,12 +7,11 @@
     <script src="chat.js" type="text/javascript"></script>
 </head>
 <body>
-<header>Чат</header>
+<header>By Evgeniy Grechishnikov</header>
 <hr>
 <div id="chat">
-    <div id="messages">
-
-    </div>
+    <h2>Чат</h2>
+    <div id="messages"></div>
     <textarea id="input" class="text" autofocus></textarea>
     <br>
     <button type="button" id="sendButton" onclick="sendMessage()">Отправить</button>
