--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,10 +9,16 @@
 <body>
 <header>By Evgeniy Grechishnikov</header>
 <hr>
+<div id="login">
+    <form>
+        <input id="userName" type="text" placeholder="Введите имя" autofocus/>
+        <button id="loginButton" type="submit" onclick="startChat(); return false;">Войти</button>
+    </form>
+</div>
 <div id="chat">
     <h2>Чат</h2>
     <div id="messages"></div>
-    <textarea id="input" class="text" autofocus></textarea>
+    <textarea id="input" class="text"></textarea>
     <br>
     <button type="button" id="sendButton" onclick="sendMessage()">Отправить</button>
 </div>
