front-end and close socket

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Чат</title>
-    <link href="chat.css" rel="stylesheet" type="text/css"/>
-    <script src="chat.js" type="text/javascript"></script>
+    <link href="chat.css?123" rel="stylesheet" type="text/css"/>
+    <script src="chat.js?123" type="text/javascript"></script>
 </head>
 <body>
 <header>By Evgeniy Grechishnikov</header>
 <hr>
 <div id="login">
     <form onsubmit="startChat();return false;">
-        <input id="userName" type="text" placeholder="Введите имя" autofocus/>
+        <input id="userName" type="text" placeholder="Введите имя"/>
         <button id="loginButton" type="button" onclick="startChat(); return false;">Войти</button>
     </form>
 </div>
