users count and view

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,11 +16,12 @@
     </form>
 </div>
 <div id="chat" class="hide">
-    <h2>Чат</h2>
+        <h2>Публичный чат</h2>
     <div id="messages"></div>
     <textarea id="input" class="text" placeholder="Введите сообщение"></textarea>
     <br>
     <button type="button" id="sendButton" onclick="sendMessage()">Отправить</button>
+    <p Id="usersCount"></p>
 </div>
 </body>
 </html>
